...
    // MARK: - UI Setup
    private func setupUI() {
        view.backgroundColor = .systemBackground
        
        view.addSubview(searchTextField)
        
        searchTextField.placeholder = "Enter city name"
        searchTextField.delegate = self
        searchTextField.layer.borderColor = UIColor.black.cgColor
        searchTextField.textColor = .black
        searchTextField.text = viewModel.selectedCityName.isEmpty ? "" : "\(viewModel.selectedCityName), \(viewModel.selectedCountryName)"
        
        searchTextField.snp.makeConstraints {
...
